--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Trac 0.5.2 (Mars 1, 2004)
+Trac 0.5.2 (March 1, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.5.2
 
  * Performance improvements.
@@ -11,8 +11,8 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.5.2
    trac.cgi at first execution.
  * Most of the inline css is removed.
  * IE6 navbar problem fixed.
- * Fixed bugs: #69, #79, #73, #77, #85, #86, #90, #91, #93, #89, #78, #97, 
-               #80, #84
+ * Fixed bugs: #69, #73, #77, #78, #79, #80, #84, #85, #86, #89, #90, 
+               #91, #93, #97, 
 	
 Trac 0.5.1 (February 25, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.5.1
@@ -24,6 +24,6 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.5.1
  * Fixed bugs: #74, #75, #76, #77.
 	
 Trac 0.5 (February 23, 2004)
-http://svn.edgewall.com/repos/trac/tags/trac-0.5.1
+http://svn.edgewall.com/repos/trac/tags/trac-0.5
 
  * First release.
