--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ http://svn.edgewall.com/repos/trac/trunk/
  * Colored reports. Use colors to show priority, etc. 
  * Report groups. Group results by a column.
  * Multi-line report rows.
+ * Download report in CSV (Comma Separated Value) and tab-separated format
+ * RSS 2.0 content syndication support in Timeline, Reports and Log/Browser
  * Better, locale-based date and time formatting. 
  * Overall cosmetic improvements.
  * Fixed bugs: #16, #103, #110, #112, #113, #114, #117,#120
