--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is the local branch for Rocky Burt <rocky@carterscove.com>
+This is the local branch for Rocky Burt <rocky@carterscove.com>, r0ky on #trac.
