Added description(s) for feature(s).
git-svn-id: https://svn.edgewall.org/repos/trac/branches/rocky-dev@352 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 This is the local branch for Rocky Burt <rocky@carterscove.com>, r0ky on #trac.
+
+Current feature branches are:
+
+  features/ticket_attachment_support-based_on_trunk
+    Based on:    Trunk
+    Description: Work for Ticket #27.  Provides attachment support for tickets
