Updated rocky-dev README
git-svn-id: https://svn.edgewall.org/repos/trac/branches/rocky-dev@371 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/README
+++ b/README
@@ -9,7 +9,6 @@ Current feature branches are:
 
   features/diff_support
     Based on:            Trunk
-    Ticket(s) Affected:  #87 #199
-    Description:         Work for downloadable diffs and ability to diff
-                         any two revs of a file
+    Ticket(s) Affected:  #87
+    Description:         Work for downloadable diffs
 
