--- a/THANKS
+++ b/THANKS
@@ -8,7 +8,7 @@ Ivo Looser        ivo.looser@login.ch
 Jennifer Murtell  jen@jmurtell.com
 Nicolas Riley     sabi
 Mark Rowe         mrowe@bluewire.net.nz
-Ollie Rutherford  ollie
+Olliver Rutherfurd  ollie
 Emmeran Seehuber  rototor@rototor.de
 
 Diggs and Lula (pawprint contributors)
