--- a/THANKS
+++ b/THANKS
@@ -5,6 +5,7 @@ Stephen Hansen    shansen@advpubtech.com
 Laurie Harper     zodiac@holoweb.net
 Francois Harvey   fharvey@securiweb.net
 Richard Hult      richard@imendio.com
+Nuutti Kotivuori  naked@iki.fi
 Ivo Looser        ivo.looser@login.ch
 Jennifer Murtell  jen@jmurtell.com
 Nicolas Riley     sabi
