--- a/THANKS
+++ b/THANKS
@@ -13,7 +13,9 @@ Mark Rowe         mrowe@bluewire.net.nz
 Olliver Rutherfurd  ollie
 Emmeran Seehuber  rototor@rototor.de
 
-Diggs and Lula (pawprint contributors)
+The elusive Anonymous (for wiki edits and bug reports)
+
+Diggs and Lula (official pawprint contributors)
 
 And everyone who keeps sending feedback, helping us improve Trac.
 
