--- a/THANKS
+++ b/THANKS
@@ -6,6 +6,7 @@ Laurie Harper           zodiac@holoweb.net
 Francois Harvey         fharvey@securiweb.net
 Richard Hult            richard@imendio.com
 Nuutti Kotivuori        naked@iki.fi
+Christopher Lenz        cmlenz@gmx.de
 Ivo Looser              ivo.looser@login.ch
 Jennifer Murtell        jen@jmurtell.com
 Nicolas Riley           sabi
@@ -13,6 +14,7 @@ Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
+Dmitry Yusupov          dmitry_yus@yahoo.com
 
 The Elusive Anonymous
 
