--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 Jonas Borgström <jonas@edgewall.com>
 Daniel Lundin <daniel@edgewall.com>
 Rocky Burt <rocky@carterscove.com>
+Christopher Lenz <cmlenz@gmx.de>
 
 See also THANKS for people who have contributed to the project.
