--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-Trac 0.7 'Fulci'  (May __, 2004)
+Trac 0.7 'Fulci'  (May 18, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.7
 
  * Revised database format (requires manual upgrade).
  * Trac standalone daemon, tracd (Experimental).
  * Greatly improved browser.
  * Many usability improvements.
+ * Clean-up of CSS and templates.
  * UTF-8 character encoding support.
  * Wiki page attachments.
  * Syntax coloring supporting >35 languages, using SilverCity or GNU Enscript.
@@ -20,16 +21,17 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.7
  * Improved search facilities.
  * Windows installer package.
  * More documentation.
- * Fixed bugs:  #14, #19, #27, #62, #87, #96, #106, #111, #115, #127,
-	#146, #158, #161, #166, #171, #180, #182, #183, #188, #190, #191,
-	#192, #193, #195, #196, #197, #201, #202, #205, #207, #210, #211,
-	#212, #213, #220, #224, #227, #228, #230, #231, #233, #235, #236,
-	#239, #240, #241, #243, #244, #245, #246, #247, #248, #249, #251,
-	#252, #253, #254, #255, #258, #259, #261, #262, #263, #264, #265,
-	#270, #271, #273, #275, #277, #278, #281, #284, #285, #288, #289,
-	#292, #293, #294, #295, #296, #300, #301, #302, #304, #306, #307,
-	#310, #312, #313, #314, #315, #316, #320, #322, #326, #328, #336,
-	#337, #338, #339, #340, #341, #343
+ * Fixed bugs: #14, #19, #27, #62, #87, #96, #106, #111, #115, #127, #146,
+	#161, #166, #171, #180, #182, #183, #188, #190, #191, #192, #193,
+	#195, #196, #197, #201, #205, #207, #211, #212, #213, #220, #224,
+	#227, #228, #231, #233, #235, #236, #240, #241, #243, #244, #246,
+	#247, #248, #249, #251, #252, #253, #254, #255, #258, #259, #261,
+	#262, #263, #265, #270, #271, #273, #275, #277, #278, #281, #284,
+	#285,  #88, #289, #292, #293, #294, #296, #300, #302, #310, #313,
+	#314, #315, #316, #320, #322, #328, #332, #333, #337, #338, #339,
+	#340, #341, #344, #348, #349, #358, #361, #362, #363, #368, #370,
+	#371, #372, #376, #377, #378, #381, #384, #385, #386, #387, #388,
+	#392, #394, #396, #398, #402, #403, #410
 
 Trac 0.6.1 '245 Trioxin (April 12, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.6.1
