--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,7 @@
+Christopher Armstrong   radix
 Rocky Burt              rocky.burt@myrealbox.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
+dju'
 Eric Gillespie          epg@netbsd.org
 Mikael Hallendal        micke@imendio.com
 Stephen Hansen          shansen@advpubtech.com
