--- a/THANKS
+++ b/THANKS
@@ -14,6 +14,7 @@ Ivo Looser              ivo.looser@login.ch
 James Moger             jamesm@transonic.com
 Jennifer Murtell        jen@jmurtell.com
 juracy@wsh.com.br
+Cap Petschulat          cap@cdres.com
 Nicolas Riley           sabi
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
