--- a/THANKS
+++ b/THANKS
@@ -15,7 +15,7 @@ James Moger             jamesm@transonic.com
 Jennifer Murtell        jen@jmurtell.com
 juracy@wsh.com.br
 Cap Petschulat          cap@cdres.com
-Nicolas Riley           sabi
+Nicholas Riley          sabi
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 Andreas Schrattenecker  vittorio
