--- a/THANKS
+++ b/THANKS
@@ -20,6 +20,7 @@ Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
+Bill Soudan             bill@soudan.net
 Dmitry Yusupov          dmitry_yus@yahoo.com
 
 The ever so elusive Anonymous.
