--- a/THANKS
+++ b/THANKS
@@ -7,6 +7,7 @@ Mikael Hallendal        micke@imendio.com
 Stephen Hansen          shansen@advpubtech.com
 Laurie Harper           zodiac@holoweb.net
 Francois Harvey         fharvey@securiweb.net
+Michael Hope            michael.hope@hamjet.co.nz
 Richard Hult            richard@imendio.com
 Nuutti Kotivuori        naked@iki.fi
 Christopher Lenz        cmlenz@gmx.de
