--- a/THANKS
+++ b/THANKS
@@ -2,6 +2,7 @@ Christopher Armstrong   radix
 Rocky Burt              rocky.burt@myrealbox.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
 dju'
+Felix Colins            felix@keyghost.com
 Eric Gillespie          epg@netbsd.org
 Mikael Hallendal        micke@imendio.com
 Stephen Hansen          shansen@advpubtech.com
@@ -14,6 +15,7 @@ Ian Leader              ian.leader@line.co.uk
 Christopher Lenz        cmlenz@gmx.de
 Ivo Looser              ivo.looser@login.ch
 James Moger             jamesm@transonic.com
+Tim Moloney             moloney@mrsl.com
 Jennifer Murtell        jen@jmurtell.com
 juracy@wsh.com.br
 Cap Petschulat          cap@cdres.com
