--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,6 @@
 Christopher Armstrong   radix
 Rocky Burt              rocky.burt@myrealbox.com
+Toni Brkic              toni.brkic@switchcore.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
 dju'
 Felix Colins            felix@keyghost.com
