--- a/THANKS
+++ b/THANKS
@@ -18,7 +18,7 @@ Ivo Looser              ivo.looser@login.ch
 James Moger             jamesm@transonic.com
 Tim Moloney             moloney@mrsl.com
 Jennifer Murtell        jen@jmurtell.com
-juracy@wsh.com.br
+Juracy Filho            juracy@gmail.com
 Cap Petschulat          cap@cdres.com
 Nicholas Riley          sabi
 Mark Rowe               mrowe@bluewire.net.nz
