--- a/THANKS
+++ b/THANKS
@@ -18,6 +18,7 @@ Ivo Looser              ivo.looser@login.ch
 James Moger             jamesm@transonic.com
 Tim Moloney             moloney@mrsl.com
 Jennifer Murtell        jen@jmurtell.com
+Jacob Norda             jacobnorda@gmail.com
 Juracy Filho            juracy@gmail.com
 Cap Petschulat          cap@cdres.com
 Nicholas Riley          sabi
@@ -26,6 +27,7 @@ Olliver Rutherfurd      ollie
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Bill Soudan             bill@soudan.net
+Zilvinas Valinskas      zilvinas@gemtek.lt
 Dmitry Yusupov          dmitry_yus@yahoo.com
 
 The ever so elusive Anonymous.
