--- a/THANKS
+++ b/THANKS
@@ -24,6 +24,7 @@ Cap Petschulat          cap@cdres.com
 Nicholas Riley          sabi
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
+pkou                    pkou@ua.fm
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Bill Soudan             bill@soudan.net
