--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,5 @@
 Christopher Armstrong   radix
+Juanma Barranquero
 Rocky Burt              rocky.burt@myrealbox.com
 Toni Brkic              toni.brkic@switchcore.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
