--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,5 @@
 Christopher Armstrong   radix
-Juanma Barranquero
+Juanma Barranquero      lektu@terra.es
 Rocky Burt              rocky.burt@myrealbox.com
 Toni Brkic              toni.brkic@switchcore.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
