--- a/THANKS
+++ b/THANKS
@@ -26,6 +26,7 @@ Nicholas Riley          sabi
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 pkou                    pkou@ua.fm
+Michael Scherer         misc@mandrake.org
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Bill Soudan             bill@soudan.net
