--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,6 @@
 Christopher Armstrong   radix
 Juanma Barranquero      lektu@terra.es
+Christian Boos          cboos@bct-technology.com
 Rocky Burt              rocky.burt@myrealbox.com
 Toni Brkic              toni.brkic@switchcore.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
