--- a/THANKS
+++ b/THANKS
@@ -24,6 +24,7 @@ Jacob Norda             jacobnorda@gmail.com
 Juracy Filho            juracy@gmail.com
 Cap Petschulat          cap@cdres.com
 Nicholas Riley          sabi
+Manuzhai                manuzhai@gmail.com
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 pkou                    pkou@ua.fm
