TracCrossReferences: support for !ChangesetObject and !SourceObject added
The support for !ChangesetObject has to be improved, though.
In particular, a `resync` won't update the cross-references
for the changesets.

git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@2279 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/README
+++ b/README
@@ -6,16 +6,6 @@ See the wiki page ChristianBoos for more info.
 
 == TODO ==
 
-=== Anydiff Branch ===
-
- * create patch against 0.9b1
- * create ticket for integration in trunk
-
-=== InterTrac Branch ===
- 
- * create patch against 0.9b1
- * create ticket for integration in trunk
-
 === TracCrossReferences Branch ===
  
  * Finish to add the Cross-references navigation link everywhere
@@ -67,6 +57,13 @@ The TicketTypes feature was integrated in the trunk in r1691.
 
  * The link syntax described in #199 will be done
    using an IWikiLinkProvider (depends on InterTrac branch).
+ * create patch against 0.9b1
+ * create ticket for integration in trunk (#2028)
+
+=== InterTrac Branch ===
+ 
+ * create patch against 0.9b1
+ * create ticket for integration in trunk (#2041)
 
 === TracCrossReferences Branch ===
 
