Clean-up of branches/cboos-dev
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@2360 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/README
+++ b/README
@@ -6,8 +6,13 @@ See the wiki page ChristianBoos for more info.
 
 == TODO ==
 
+=== InterTrac Branch ===
+ 
+ * isolate InterTrac and InterWiki features (i.e. unmerge TracDiff)
+
 === TracCrossReferences Branch ===
  
+ * isolate xref features (i.e. unmerge TracDiff and InterTrac)
  * Get #787 done, and also manage cross-references on the attachment
    description facets
  * Implement the `<<...>>` syntax
